[package]
name = "solana-usdc-indexer"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core Solana dependencies - using compatible versions
solana-client = "1.16.27"
solana-sdk = "1.16.27"
spl-token = "3.5.0"

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Time handling
chrono = { version = "0.4.31", features = ["serde"] }

# Error handling
anyhow = "1.0"

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Encoding
base64 = "0.21.7"
bs58 = "0.4.0"

# CLI
clap = { version = "4.4", features = ["derive"] }

# Async utilities
futures = "0.3"

[[bin]]
name = "indexer"
path = "src/main.rs"