[package]
name = "solana-usdc-indexer"
version = "0.1.0"
edition = "2021"

[dependencies]
# Minimal dependencies to avoid conflicts
tokio = { version = "1.28", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4.24", features = ["serde"] }
anyhow = "1.0"
reqwest = { version = "0.11", features = ["json"] }
base64 = "0.20"
bs58 = "0.4.0"
clap = { version = "4.0", features = ["derive"] }
futures = "0.3"

[[bin]]
name = "indexer"
path = "src/main.rs"