[package]
name = "solana-usdc-indexer"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core Solana dependencies - latest versions
solana-client = "1.18"
solana-sdk = "1.18"
spl-token = "4.0"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1.0"

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Encoding
base64 = "0.21"
bs58 = "0.5"

# CLI
clap = { version = "4.0", features = ["derive"] }

# Async utilities
futures = "0.3"

[[bin]]
name = "indexer"
path = "src/main.rs"